--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     padding: 20px;
     border: 1px solid hsl(244, 90%, 45%);
     box-shadow: #1c04f1;
+    border-radius:5%;
     
     
 }
